--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   lint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
     - uses: actions/checkout@v4
@@ -22,20 +22,20 @@ jobs:
     - uses: actions/setup-python@v5
       with: { python-version: "3.12" }
 
-    - name: Install codespell
-      run: pip3 install codespell
+    # - name: Install codespell
+    #   run: pip3 install codespell
 
     - name: Lint
-      run: cmake -D FORMAT_COMMAND=clang-format-14 -P cmake/lint.cmake
+      run: cmake -D FORMAT_COMMAND=clang-format-18 -P cmake/lint.cmake
 
-    - name: Spell check
-      if: always()
-      run: cmake -P cmake/spell.cmake
+    # - name: Spell check
+    #   if: always()
+    #   run: cmake -P cmake/spell.cmake
 
   coverage:
     needs: [lint]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     # To enable coverage, delete the last line from the conditional below and
     # edit the "<name>" placeholder to your GitHub name.
@@ -77,9 +77,9 @@ jobs:
   sanitize:
     needs: [lint]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
-    env: { CXX: clang++-14 }
+    env: { CXX: clang++-18 }
 
     steps:
     - uses: actions/checkout@v4
@@ -112,7 +112,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-14, ubuntu-22.04, windows-2022]
+        os: [ubuntu-24.04]
 
     runs-on: ${{ matrix.os }}
 
@@ -120,13 +120,13 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install static analyzers
-      if: matrix.os == 'ubuntu-22.04'
+      if: matrix.os == 'ubuntu-24.04'
       run: >-
-        sudo apt-get install clang-tidy-14 cppcheck -y -q
+        sudo apt-get install clang-tidy-18 cppcheck -y -q
 
         sudo update-alternatives --install
         /usr/bin/clang-tidy clang-tidy
-        /usr/bin/clang-tidy-14 140
+        /usr/bin/clang-tidy-18 140
 
     - name: Install vcpkg
       uses: friendlyanon/setup-vcpkg@v1
@@ -156,7 +156,7 @@ jobs:
     # Deploy docs only when builds succeed
     needs: [sanitize, test]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     # To enable, first you have to create an orphaned gh-pages branch:
     #
